# icon

./: .clang-format  CMakeLists.txt  Dockerfile  EndpointContext.hpp  Makefile  README.md  accept_monitor.hpp  basic_endpoint.hpp  clang-format  co_main.cpp  co_main2.cpp  co_main3.cpp  co_stream_watcher.hpp  conanfile.py  conanfile.txt  consumer_handler.hpp  context.cpp  context.hpp  cppcheck-suppressions.txt  data_types.hpp  endpoint.hpp  endpoint_builder.hpp  endpoint_config.hpp  endpoint_ctx.hpp  event_bus.hpp  flags.hpp  icon.hpp  icon.proto  main.cpp  main2.cpp  old  old_main.cpp  protobuf_field.hpp  protobuf_serialization.hpp  protocol.hpp  stream_watcher.hpp  utils.hpp  zmq_client.hpp  zmq_co_recv_op.hpp  zmq_co_send_op.hpp  (+4 more)
.github/workflows/: cmake-backup  cmake.yml
bzmq/: boost_coro.hpp  co_stream_watcher.hpp  zmq_co_recv_op.hpp  zmq_co_send_op.hpp
client/: basic_client.hpp  response.hpp  zmq_client.hpp
cmake/: StaticAnalyzers.cmake  iconConfig.cmake
conan/: CMakeLists.txt
core/: body.hpp  header.hpp  identity.hpp  protocol.hpp
endpoint/: base_endpoint.hpp  consumer_handler.hpp  endpoint.hpp  endpoint_config.hpp  message_context.hpp  request.hpp
endpoint/basic_endpoint/: basic_endpoint.cpp  basic_endpoint.hpp  basic_endpoint_builder.hpp  basic_endpoint_consumer_handler.hpp
icon/: CMakeLists.txt  Makefile  cmake_install.cmake  icon.hpp  icon_export.h
icon/bzmq/: co_stream_watcher.hpp  zmq_co_recv_op.hpp  zmq_co_send_op.hpp
icon/client/: basic_client.hpp  client.hpp  error.hpp  request.hpp  response.hpp
icon/core/: header.hpp  protocol.hpp  transport.hpp  unknown_message.hpp
icon/endpoint/: base_endpoint.hpp  consumer_handler.hpp  endpoint_config.hpp  message_context.hpp  request.hpp  response.hpp
icon/endpoint/basic_endpoint/: basic_endpoint.cpp  basic_endpoint.hpp  basic_endpoint_builder.hpp  basic_endpoint_consumer_handler.hpp
icon/icon/: iconTargets.cmake
icon/metadata/: metadata.proto
icon/protobuf/: icon.proto  protobuf_message_number.hpp  protobuf_serialization.hpp
icon/utils/: async_mutex.hpp  flags.hpp  logger.hpp  schedule.hpp  timeout_guard.hpp
protobuf/: protobuf_deserializable.hpp  protobuf_message_number.hpp  protobuf_serializable.hpp  protobuf_serialization.hpp
serialization/: protobuf_deserializable.hpp  protobuf_message_number.hpp  protobuf_serializable.hpp  protobuf_serialization.hpp  serialization.hpp
src/: CMakeLists.txt  icon.hpp  main.cpp
src/bzmq/: co_stream_watcher.hpp  zmq_co_recv_op.hpp  zmq_co_send_op.hpp
src/client/: basic_client.hpp  client.hpp  request.hpp  response.hpp  zmq_client.hpp
src/core/: header.hpp  identity.hpp  protocol.hpp  transport.hpp  unknown_message.hpp
src/endpoint/: base_endpoint.hpp  consumer_handler.hpp  endpoint.hpp  endpoint_config.hpp  message_context.hpp  request.hpp  response.hpp
src/endpoint/basic_endpoint/: basic_endpoint.cpp  basic_endpoint.hpp  basic_endpoint_builder.hpp  basic_endpoint_consumer_handler.hpp
src/protobuf/: protobuf_deserializable.hpp  protobuf_message_number.hpp  protobuf_serializable.hpp  protobuf_serialization.hpp
src/serialization/: serialization.hpp
src/utils/: context.cpp  context.hpp  flags.hpp  schedule.hpp  support.hpp  traits.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  basic_endpoint_tests.cpp  cmake_install.cmake  dummy.proto  send_receive_tests.cpp
tests/client/: basic_client_tests.cpp  request_tests.cpp  response_tests.cpp
tests/e2e/: basic_exchange_messages_test.cpp  exchange_messages.cpp  extended_exchange_messages_test.cpp  send_receive_tests.cpp
tests/utils/: async_mutex_tests.cpp
transport/: metadata.proto
utils/: schedule.hpp  traits.hpp
zmq_io/: co_stream_watcher.hpp
